--- a/index.html
+++ b/index.html
@@ -1,1 +1,3 @@
+<meta http-equiv="refresh" content="0; url=http://sosothikul.com:8011">
+<link rel="canonical" href="http://sosothikul.com:8011" />
 Sosothikul Family
